Add weather image file name, fix convertTemperature

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=ArduinoWeatherDataDownloader
-version=2.0.0
+version=3.0.0
 author=Daniel Savaria
 maintainer=Daniel Savaria
 sentence=Downloads Weather Data for use by Arduino sketches.
 category=Communication
 url=https://github.com/DTSavaria/ArduinoWeatherDataDownloader
-includes=NwsWeatherData.hpp
+includes=ArduinoWeatherDataDownloader.hpp
 depends=ArduinoJson
